# TSB-Project-Phase2

./: CENAS_UTEIS  PATH1.json  PATH2.json  PATH3.json  README.md
.github/workflows/: built_test.yml
project_tsb/: CMakeLists.txt  package.xml
project_tsb/launch/: all.py  minimal.py
project_tsb/rviz/: config.rviz
project_tsb/scripts/: plotter.py
project_tsb/src/: MotorController.cpp  PathFollower.cpp  forces2currents.cpp  pid.cpp  simulator.cpp
project_tsb_msgs/: CMakeLists.txt  package.xml
project_tsb_msgs/msg/: BoatPosition.msg  BoatReference.msg  BoatState.msg  ControlCurrents.msg  ControlForces.msg  DesiredPosition.msg  MotorCurrents.msg
